# passkey_demo

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_initial_schema.sql  002_conditional_auth.sql
src/: config.rs  error.rs  main.rs  state.rs
src/db/: challenges.rs  credentials.rs  mod.rs  models.rs  users.rs
src/handlers/: auth.rs  health.rs  mod.rs  users.rs
src/middleware/: auth.rs  mod.rs
src/webauthn/: authentication.rs  mod.rs  registration.rs  types.rs
static/: app.js  index.html  style.css
